[project]
name = "TensorVizion"
description = "Utility Nodes for All Comfy Users"
version = "1.0.0"
license = "MIT"

[project.urls]
Repository = "https://github.com/TensorVizion/OmniNodes-ComfyUI"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "TensorVizion"
DisplayName = "ComfyUI-AIT"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

